# cpp_socket

./: README.md  client.cpp  server.cpp  thread.sh
Socket_Project/: CMakeLists.txt
Socket_Project/includes/: header.h
Socket_Project/src/client/: ClientMain.cpp  MyClient.cpp
Socket_Project/src/server/: MyServer.cpp  ServerMain.cpp
임재준_Socket_Project/includes/: header.h
